VA-1328 Fix handle visibility

--- a/src/styles/drag-text.css
+++ b/src/styles/drag-text.css
@@ -29,7 +29,7 @@
   padding-left: var(--handle-width);
 }
 
-.h5p-drag-text:has(.h5p-question-evaluation-container.evaluation-mode) .h5p-drag-draggables-container .h5p-draggable {
+.h5p-drag-text .h5p-drag-draggables-container.no-handles .h5p-draggable {
   padding-left: 0;
 }
 
